# dazhbog

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: codec.rs  config.rs  db.rs  home.html  http.rs  legacy.rs  lib.rs  lumina.rs  main.rs  metrics.rs  rpc.rs  server.rs  upstream.rs  util.rs
src/api/: metrics.rs
src/api/http/: handlers.rs  router.rs  templates.rs
src/common/: demangle.rs
src/db/: database.rs  mod.rs  semantic.rs  types.rs
src/engine/: context_index.rs  index.rs  mod.rs  segment.rs  spin.rs
src/engine/search/: index.rs  mod.rs  rebuild.rs  types.rs
src/net/: handler.rs
src/protocol/lumina/: builder.rs  metadata.rs  mod.rs  parser.rs  type_decoder.rs  types.rs  wire.rs
src/protocol/rpc/: decoder.rs  types.rs
tests/: boundary_conditions.rs  database_integration.rs  lumina_authoritative.rs  metadata_parser.rs  performance_stress.rs  protocol_test.rs  security_fuzzing.rs  semantic_matching.rs  semantic_neighbors.rs
